tests/140_variadic_arity_error.err
pirxc compilation failed: exit status 1
Output: tests/140_variadic_arity_error.pirx:3:3: function printf requires at least 1 arguments but 0 were provided
Error: exit status 1
