tests/140_variadic_arity_error.pirx
// Variadic functions still require all of their fixed arguments.
func main(): int {
  printf();
  return 0;
}
